# casadi-control

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml  static.yml
doc/source/: conf.py  index.rst  installation.rst  references.bib
doc/source/.jupyter/kernels/python3/: kernel.json
doc/source/.matplotlib/: fontlist-v390.json
doc/source/_static/: custom.css
doc/source/_templates/: searchbox.html
doc/source/_templates/autosummary/: module.rst.bak
doc/source/examples/: .gitignore  index.rst
doc/source/reference/: discretization.base.rst  discretization.collocation.rst  discretization.rst  index.rst  solvers.rst
doc/source/user_guide/: design.rst  discretization.rst  index.rst  scaling.rst
examples/: hager_hao_rao_ocp.py  hager_hou_rao_ocp.ipynb  hager_hou_rao_ocp.py  hager_lq_ocp.ipynb  hager_lq_ocp.py
src/casadi_control/: __init__.py  _array_utils.py  api.py
src/casadi_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/casadi_control/discretization/: __init__.py  base.py  registry.py
src/casadi_control/discretization/collocation/: __init__.py  archive.py  common.py  decode.py  direct_collocation.py  initialize.py  postprocess.py  trajectory.py  transcription.py
src/casadi_control/discretization/collocation/schemes/: __init__.py  base.py  flgr.py
src/casadi_control/problem/: __init__.py  ocp.py  scaling.py
src/casadi_control/solvers/: __init__.py  ipopt.py  options.py
tests/: test_collocation_api.py  test_collocation_coeffs.py  test_discretization_registry.py
