[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casadi-control"
version = "0.1.0"
description = "CasADi optimal control framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "casadi",
  "numpy",
]
keywords = ["casadi", "optimal-control", "nonlinear-optimization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
examples = [
  "matplotlib",
]
test = [
  "pytest",
  "scipy",
]
docs = [
  "sphinx>=7",
  "pydata-sphinx-theme",
  "numpydoc",
  "sphinx-design",
]
dev = [
  "pytest",
  "scipy",
  "matplotlib",
  "sphinx>=7",
  "pydata-sphinx-theme",
  "numpydoc",
  "sphinx-design",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
