[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casadi-control"
version = "0.1.0"
description = "Tools for formulating and solving continuous-time optimal control problems with CasADi."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "casadi",
  "numpy",
]
keywords = ["casadi", "optimal-control", "nonlinear-optimization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/jdsteinman/casadi-control"
Repository = "https://github.com/jdsteinman/casadi-control"
Issues = "https://github.com/jdsteinman/casadi-control/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
examples = [
  "matplotlib",
  "jupytext",
]
test = [
  "pytest",
  "scipy",
]
docs = [
  "matplotlib",
  "sphinx>=7",
  "pydata-sphinx-theme",
  "numpydoc",
  "sphinx-design",
  "sphinxcontrib-bibtex",
  "nbsphinx",
  "jupytext",
  "ipykernel",
]
dev = [
  "pytest",
  "scipy",
  "matplotlib",
  "sphinx>=7",
  "pydata-sphinx-theme",
  "numpydoc",
  "sphinx-design",
  "sphinxcontrib-bibtex",
  "nbsphinx",
  "jupytext",
  "ipykernel",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
